# newnum

./: Cargo.toml  LICENSE  README.md
examples/newtypes/: Cargo.toml
examples/newtypes/src/: angle.rs  main.rs  ratio.rs  whole_ratio.rs
newnum/: Cargo.toml
newnum/src/: abs_diff.rs  derive.rs  from_primitives.rs  lib.rs  primitive.rs  round.rs  sign.rs
newnum/src/api/: abs_diff.rs  from_literal.rs  literal.rs  min_max.rs  mod.rs  root.rs  round.rs  sign.rs  signed.rs  trig.rs  type_min_max.rs  whole.rs
newnum/src/initialization/: from_float_literal.rs  from_int_literal.rs  mod.rs
newnum/src/primitive/: float.rs  int.rs  mod.rs  signed.rs  sint.rs  uint.rs  unsigned.rs
newnum/src/range/: floating.rs  from_primitives.rs  min_max_values.rs  mod.rs  normalizable.rs  sign.rs  whole.rs
newnum_proc_macros/: Cargo.toml  README.md
newnum_proc_macros/src/: derive_abs_diff.rs  derive_bound.rs  derive_empty.rs  derive_min_max.rs  derive_root.rs  derive_round.rs  derive_sign.rs  derive_trig.rs  derive_type_min_max.rs  derive_whole.rs  lib.rs  num.rs  sign.rs
newnum_proc_macros/src/util/: derive_eval_fields.rs  derive_map_fields.rs  derive_rhs_map_fields.rs  derive_single_field.rs  mod.rs
numflex/: Cargo.toml
numflex/src/: from_primitives.rs  lib.rs  primitive.rs  sign.rs  trig.rs  values.rs
renum/: Cargo.toml
renum/src/: lib.rs  root.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
