[package]
categories  = [ "data-structures", "mathematics" ]
description = "traits for number API and hierarchy"
edition     = "2021"
license     = "MIT"
name        = "newnum"
readme      = "../README.md"
repository  = "https://github.com/Noam2Stein/newnum"
version     = "0.0.12"

[dependencies]
newnum_proc_macros = "0.0.11"
splat_attribs      = "1.0.0"
