[package]
description = "Procedural macros meant to be rexported through the `newnum` crate"
edition     = "2021"
license     = "MIT"
name        = "newnum_proc_macros"
readme      = "README.md"
version     = "0.0.9"

[lib]

proc-macro = true

[dependencies]
derive-syn-parse = "0.2.0"
proc-macro2      = "1.0.93"
quote            = "1.0.38"
syn              = { version = "2.0.96", features = [ "full" ] }
